// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render summary for multiple expenses 1`] = `
<div>
  <p>
    Viewing 2 expenses totalling $10.00
  </p>
</div>
`;

exports[`should render summary for single expense 1`] = `
<div>
  <p>
    Viewing 1 expense totalling $5.00
  </p>
</div>
`;
